index.html Cid.

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <div class="container-um">
       <div class="buttons-links">
         <select id="contratoSelect" class="btn btn-contrato">
-          <option value="https://contrato-portugal.vercel.app/">Portugal</option>
-          <option value="https://gerador-de-contrato-imigrei.vercel.app/">Itália</option>
-          <option value="https://contrato-espanha.vercel.app/">Espanha</option>
+          <option value="https://contrato-portugal.vercel.app/">Cid. Portuguesa</option>
+          <option value="https://gerador-de-contrato-imigrei.vercel.app/">Cid. Italiana</option>
+          <option value="https://contrato-espanha.vercel.app/">Cid. Espanhola</option>
         </select>
         <a href="https://formulario-procuracao-imigrei.vercel.app/" class="btn btn-proposta">Procuração</a>
       </div>
