--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
           <option value="https://contrato-portugal.vercel.app/">Cid. Portuguesa</option>
           <option value="https://gerador-de-contrato-imigrei.vercel.app/">Cid. Italiana</option>
           <option value="https://contrato-espanha.vercel.app/">Cid. Espanhola</option>
+          <option value="https://proposta-genealogia-imigrei.vercel.app/">Busca Genealógica</option>
+          <option value="https://formulario-procuracao-imigrei.vercel.app/">Contr. Parceiria</option>
         </select>
         <a href="https://formulario-procuracao-imigrei.vercel.app/" class="btn btn-proposta">Procuração</a>
       </div>
